project(stl_cut)
cmake_minimum_required(VERSION 3.5)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(CMAKE_INSTALL_INCDIR "${CMAKE_INSTALL_PREFIX}/include")
SET(CMAKE_INSTALL_LIBDIR "${CMAKE_INSTALL_PREFIX}/lib")

file(GLOB_RECURSE SOURCE_HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)

set(SOURCE_CC stlcut.cpp)

add_library(stlcut SHARED ${SOURCE_CC})

target_link_libraries(stlcut
    m)

set_target_properties(stlcut PROPERTIES SOVERSION 1)
target_include_directories(stlcut PUBLIC
    ${PROJECT_SOURCE_DIR}
)

INSTALL (FILES "${SOURCE_HEADERS}" DESTINATION ${CMAKE_INSTALL_INCDIR} )
INSTALL (TARGETS stlcut LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}")
